--- a/src/app/pages/administration-risk/impact/modal-impact/modal-impact.component.html
+++ b/src/app/pages/administration-risk/impact/modal-impact/modal-impact.component.html
@@ -28,6 +28,6 @@
 
 
 <div class="container-btn-save" mat-dialog-actions>
-    <button (click)="save()" type="button" [disabled]="!formImpact.valid">Guardar</button>
-    <button type="button" mat-dialog-close>Cerrar</button>
+    <button (click)="save()" type="button" [disabled]="!formImpact.valid" class="btn-warm">Guardar</button>
+    <button type="button" mat-dialog-close class="btn-blue-dark">Cerrar</button>
 </div>
