--- a/src/app/pages/administration-risk/probability/probability.component.html
+++ b/src/app/pages/administration-risk/probability/probability.component.html
@@ -5,7 +5,7 @@
 </app-table-edit>
 
 <div class="container-btn-save">
-    <button (click)="add()">Añadir</button>
-    <button (click)="add(indexSelected)" [disabled]="indexSelected === null">Modificar</button>
-    <button>Grabar</button>
+    <button (click)="add()" class="btn-blue-dark">Añadir</button>
+    <button (click)="add(indexSelected)" [disabled]="indexSelected === null" class="btn-blue-dark">Modificar</button>
+    <button class="btn-warm">Grabar</button>
 </div>
