--- a/src/app/pages/administration/components/modal-personal/modal-personal.component.html
+++ b/src/app/pages/administration/components/modal-personal/modal-personal.component.html
@@ -42,8 +42,8 @@
 
 
         <div class="container-btn-personal">
-            <button (click)="search()" type="button">Buscar</button>
-            <button (click)="clear()" type="button">Limpiar</button>
+            <button (click)="search()" type="button" class="btn-warm">Buscar</button>
+            <button (click)="clear()" type="button" class="btn-blue-dark">Limpiar</button>
         </div>
     </form>
 
