--- a/src/app/pages/administration/components/states/modal-state/modal-state.component.html
+++ b/src/app/pages/administration/components/states/modal-state/modal-state.component.html
@@ -11,7 +11,7 @@
     </mat-form-field>
 
     <div class="container-btn-save">
-        <button (click)="save()" type="button" [disabled]="!formState.valid">Guardar</button>
-        <button type="button" mat-dialog-close>Cerrar</button>
+        <button (click)="save()" type="button" [disabled]="!formState.valid" class="btn-warm">Guardar</button>
+        <button type="button" mat-dialog-close class="btn-blue-dark">Cerrar</button>
     </div>
 </form>
