--- a/src/app/pages/documented-information/components/edit-document/edit-document.component.scss
+++ b/src/app/pages/documented-information/components/edit-document/edit-document.component.scss
@@ -29,17 +29,9 @@
     line-height: 20px;
 }
 
-.btn-back-doc{
-    background-color: $tamarama;
-    color: $white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 2px;
-    cursor: pointer;
-}
 
 .btn-new-doc{
-    background-color: $success;
+    background-color: $warn;
     color: $white;
     border: none;
     padding: 8px 17px;
