--- a/src/app/pages/maintenance/components/user/user.component.html
+++ b/src/app/pages/maintenance/components/user/user.component.html
@@ -19,7 +19,7 @@
     </mat-form-field>
 
     <div class="container-btn-save">
-        <button (click)="save()" type="button" [disabled]="!formUser.valid">Guardar</button>
+        <button (click)="save()" type="button" [disabled]="!formUser.valid" class="btn-warm">Guardar</button>
     </div>
 </form>
 
