--- a/src/app/pages/process-indicators/components/formulation-sheet/dates-indicator/dates-indicator.component.html
+++ b/src/app/pages/process-indicators/components/formulation-sheet/dates-indicator/dates-indicator.component.html
@@ -42,7 +42,7 @@
 
 
     <div class="container-btn-save">
-        <button (click)="save()" type="button" [disabled]="!formIndicador.valid">Guardar</button>
-        <button (click)="next()" type="button">Siguiente</button>
+        <button (click)="save()" type="button" [disabled]="!formIndicador.valid" class="btn-warm">Guardar</button>
+        <button (click)="next()" type="button" class="btn-blue-dark">Siguiente</button>
     </div>
 </form>
