--- a/src/app/pages/process-risk/components/asset-inventory/modal-asset-inventory/modal-asset-inventory.component.html
+++ b/src/app/pages/process-risk/components/asset-inventory/modal-asset-inventory/modal-asset-inventory.component.html
@@ -56,6 +56,6 @@
 
 
 <div class="container-btn-save" mat-dialog-actions>
-    <button (click)="save()" type="button" [disabled]="!formAssetInventory.valid">Guardar</button>
-    <button type="button" mat-dialog-close>Cerrar</button>
+    <button (click)="save()" type="button" [disabled]="!formAssetInventory.valid" class="btn-warm">Guardar</button>
+    <button type="button" mat-dialog-close class="btn-blue-dark">Cerrar</button>
 </div>
