--- a/src/app/pages/process-risk/components/risk-treatment/modal-risk-treatment/modal-risk-treatment.component.html
+++ b/src/app/pages/process-risk/components/risk-treatment/modal-risk-treatment/modal-risk-treatment.component.html
@@ -127,6 +127,6 @@
 
 
 <div class="container-btn-save" mat-dialog-actions>
-    <button (click)="save()" type="button" [disabled]="!formRiskTreatment.valid">Guardar</button>
-    <button type="button" mat-dialog-close>Cerrar</button>
+    <button (click)="save()" type="button" [disabled]="!formRiskTreatment.valid" class="btn-warm">Guardar</button>
+    <button type="button" mat-dialog-close class="btn-blue-dark">Cerrar</button>
 </div>
