--- a/src/app/pages/processes/components/authorization-register/efficacy-verification/efficacy-verification.component.html
+++ b/src/app/pages/processes/components/authorization-register/efficacy-verification/efficacy-verification.component.html
@@ -45,6 +45,6 @@
     </div>
 
     <div class="container-btn-save">
-        <button (click)="save()" type="button" [disabled]="!formEfficacyVerification.valid">Guardar</button>
+        <button (click)="save()" type="button" [disabled]="!formEfficacyVerification.valid" class="btn-warm">Guardar</button>
     </div>
 </form>
