--- a/src/app/pages/processes/components/record-findings/action-request/action-request.component.html
+++ b/src/app/pages/processes/components/record-findings/action-request/action-request.component.html
@@ -78,6 +78,6 @@
       </mat-form-field>
 
     <div class="container-btn-save">
-        <button (click)="save()" type="button" [disabled]="!formActionRequest.valid">Grabar</button>
+        <button (click)="save()" type="button" [disabled]="!formActionRequest.valid" class="btn-warm">Grabar</button>
     </div>
 </form>
