--- a/src/app/pages/processes/components/record-findings/list-actions/list-actions.component.html
+++ b/src/app/pages/processes/components/record-findings/list-actions/list-actions.component.html
@@ -2,7 +2,7 @@
     <div class="lable-cont">Buscar</div>
     <app-datepicker-year (onGetValue)="getYear($event)" [width]="'200'" [dateYear]="dateYear"
     [changeCount]="changeCountYear"></app-datepicker-year>
-    <button (click)="search()" type="button" class="btn-search">Buscar</button>
+    <button (click)="search()" type="button" class="btn-warm">Buscar</button>
 </div>
 
 <div class="container-responsible-table">
