--- a/src/app/pages/processes/components/share-register/action-plan-share/action-plan-share.component.html
+++ b/src/app/pages/processes/components/share-register/action-plan-share/action-plan-share.component.html
@@ -45,5 +45,5 @@
 </div>
 
 <div class="container-btn-save">
-    <button (click)="next()" type="button">Siguiente</button>
+    <button (click)="next()" type="button" class="btn-warm">Siguiente</button>
 </div>
