--- a/src/app/pages/processes/components/share-register/follow-up-share/follow-up-share.component.html
+++ b/src/app/pages/processes/components/share-register/follow-up-share/follow-up-share.component.html
@@ -44,6 +44,6 @@
     </mat-form-field>
 
     <div class="container-btn-save">
-        <button (click)="next()" type="button" [disabled]="!formUpShare.valid">Siguiente</button>
+        <button (click)="next()" type="button" [disabled]="!formUpShare.valid" class="btn-warm">Siguiente</button>
     </div>
 </form>
