--- a/src/app/pages/reports-indicators/components/report-indicators/report-indicators.component.html
+++ b/src/app/pages/reports-indicators/components/report-indicators/report-indicators.component.html
@@ -14,7 +14,7 @@
                 </div>
     
                 <div>
-                    <button class="btn-light-blue" [disabled]="!formReportIndicator.valid" (click)="generate()">Generar</button>
+                    <button class="btn-warm" [disabled]="!formReportIndicator.valid" (click)="generate()">Generar</button>
                 </div>
             </div>
     
