--- a/src/app/pages/administration-risk/effectiveness/modal-effectiveness/modal-effectiveness.component.html
+++ b/src/app/pages/administration-risk/effectiveness/modal-effectiveness/modal-effectiveness.component.html
@@ -21,6 +21,6 @@
 
 
 <div class="container-btn-save" mat-dialog-actions>
-    <button (click)="save()" type="button" [disabled]="!formEffectiveness.valid">Guardar</button>
-    <button type="button" mat-dialog-close>Cerrar</button>
+    <button (click)="save()" type="button" [disabled]="!formEffectiveness.valid" class="btn-warm">Guardar</button>
+    <button type="button" mat-dialog-close class="btn-blue-dark">Cerrar</button>
 </div>
