--- a/src/app/pages/administration-risk/probability/modal-probability/modal-probability.component.html
+++ b/src/app/pages/administration-risk/probability/modal-probability/modal-probability.component.html
@@ -23,6 +23,6 @@
 
 
 <div class="container-btn-save" mat-dialog-actions>
-    <button (click)="save()" type="button" [disabled]="!formProbability.valid">Guardar</button>
-    <button type="button" mat-dialog-close>Cerrar</button>
+    <button (click)="save()" type="button" [disabled]="!formProbability.valid" class="btn-warm">Guardar</button>
+    <button type="button" mat-dialog-close class="btn-blue-dark">Cerrar</button>
 </div>
