--- a/src/app/pages/administration/components/auditors/auditors.component.html
+++ b/src/app/pages/administration/components/auditors/auditors.component.html
@@ -41,9 +41,9 @@
         </table>
     </div>
     <div class="container-btn-save">
-        <button (click)="add()">Añadir</button>
-        <button (click)="edit()" [disabled]="!editActive">Modificar</button>
-        <button>Grabar</button>
+        <button (click)="add()" class="btn-blue-dark">Añadir</button>
+        <button (click)="edit()" [disabled]="!editActive" class="btn-blue-dark">Modificar</button>
+        <button class="btn-warm">Grabar</button>
     </div>
 </div>
 
@@ -65,7 +65,7 @@
     </div>
 
     <div class="container-btn-save">
-        <button (click)="save()" type="button" [disabled]="!formAuditors.valid">Guardar</button>
-        <button (click)="showForm = false" type="button">Atras</button>
+        <button (click)="save()" type="button" [disabled]="!formAuditors.valid" class="btn-warm">Guardar</button>
+        <button (click)="showForm = false" type="button" class="btn-blue-dark">Atras</button>
     </div>
 </form>
