--- a/src/app/pages/administration/components/sources/modal-source/modal-source.component.html
+++ b/src/app/pages/administration/components/sources/modal-source/modal-source.component.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="container-btn-save">
-        <button (click)="save()" type="button" [disabled]="!formSource.valid">Guardar</button>
-        <button type="button" mat-dialog-close>Cerrar</button>
+        <button (click)="save()" type="button" [disabled]="!formSource.valid" class="btn-warm">Guardar</button>
+        <button type="button" mat-dialog-close class="btn-blue-dark">Cerrar</button>
     </div>
 </form>
