--- a/src/app/pages/administration/components/sources/sources.component.html
+++ b/src/app/pages/administration/components/sources/sources.component.html
@@ -46,9 +46,9 @@
         </table>
     </div>
     <div class="container-btn-save">
-        <button (click)="add()">Añadir</button>
-        <button (click)="edit()" [disabled]="!editActive">Modificar</button>
-        <button>Grabar</button>
+        <button (click)="add()" class="btn-blue-dark">Añadir</button>
+        <button (click)="edit()" [disabled]="!editActive" class="btn-blue-dark">Modificar</button>
+        <button class="btn-warm">Grabar</button>
     </div>
 </div>
 
