--- a/src/app/pages/administration/components/types/types.component.html
+++ b/src/app/pages/administration/components/types/types.component.html
@@ -29,8 +29,8 @@
         </table>
     </div>
     <div class="container-btn-save">
-        <button (click)="add()">Añadir</button>
-        <button (click)="edit()" [disabled]="!editActive">Modificar</button>
-        <button>Grabar</button>
+        <button (click)="add()" class="btn-blue-dark">Añadir</button>
+        <button (click)="edit()" [disabled]="!editActive" class="btn-blue-dark">Modificar</button>
+        <button class="btn-warm">Grabar</button>
     </div>
 </div>
