--- a/src/app/pages/documented-information/components/edit-document/edit-document.component.html
+++ b/src/app/pages/documented-information/components/edit-document/edit-document.component.html
@@ -1,5 +1,10 @@
 <div class="cont-actions-edit-doc">
-    <button (click)="back()" class="btn-back-doc">Atras</button>
+    <button (click)="back()" class="btn-back-doc">
+      <div>
+        <img src="assets/images/back.png" alt="icono atras">
+        Atras
+      </div>
+    </button>
     <div class="col-2-edit-doc">
       <button class="btn-new-doc" (click)="ModalDoc()">
         <div class="content-btn">
@@ -17,7 +22,7 @@
     </div>
 
 
-<mat-tab-group class="mat-tab-sunarp-edit" [(selectedIndex)]="indexTab">
+<mat-tab-group class="mat-tab-sunarp" [(selectedIndex)]="indexTab">
     <mat-tab label="Documentos Generales y Específicos ">
       <app-document-one [newData]="dataDoc1" (onEdit)="ModalDoc($event)" [editData]="dataEditDoc1"></app-document-one>
     </mat-tab>
