--- a/src/app/pages/documented-information/components/modal-document/general-documents/general-documents.component.html
+++ b/src/app/pages/documented-information/components/modal-document/general-documents/general-documents.component.html
@@ -37,7 +37,7 @@
 
     <div class="cont-download" (click)="inptDownload.click()">
         <div class="content">
-            <mat-icon>backup</mat-icon>
+            <img src="assets/images/upload-file.png" alt="icono subir archivo">
             <div>Subir Archivo</div>
         </div>
     </div>
