--- a/src/app/pages/documented-information/components/modal-document/modal-document.component.scss
+++ b/src/app/pages/documented-information/components/modal-document/modal-document.component.scss
@@ -7,24 +7,27 @@
     }
 }
 
-.mff-typedoc {
+::ng-deep .mff-typedoc {
     width      : 100%;
     padding: 0 20px;
     padding-top: 1.34375em;
     box-sizing: border-box;
+
+    .mat-form-field-wrapper {
+        padding-bottom: 10px;
+    }
 }
 
 ::ng-deep .cont-download {
-    background-color: #8cc434;
     width           : 100%;
-    height          : 100px;
+    height          : 138px;
     display         : flex;
     flex-wrap       : wrap;
     align-items     : center;
     justify-content : center;
     cursor          : pointer;
     margin-bottom   : 10px;
-    border          : 1px solid #000000;
+    border: 3px solid #E0E0E0;
     border-style    : dashed;
     box-sizing: border-box;
 
@@ -38,11 +41,16 @@
         display        : flex;
         flex-wrap      : wrap;
         justify-content: center;
+        gap: 9px;
 
         div {
             width     : 100%;
             text-align: center;
             font-size : 16px;
+            color: $white-blue;
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 20px;
         }
     }
 }
