--- a/src/app/pages/process-indicators/components/formulation-sheet/medition-control/medition-control.component.html
+++ b/src/app/pages/process-indicators/components/formulation-sheet/medition-control/medition-control.component.html
@@ -21,7 +21,7 @@
 
 
     <div class="container-btn-save">
-        <button (click)="save()" type="button" [disabled]="!formMedition.valid">Guardar</button>
-        <button (click)="next()" type="button">Siguiente</button>
+        <button (click)="save()" type="button" [disabled]="!formMedition.valid" class="btn-warm">Guardar</button>
+        <button (click)="next()" type="button" class="btn-blue-dark">Siguiente</button>
     </div>
 </form>
