--- a/src/app/pages/process-indicators/components/formulation-sheet/meta-indicator/meta-indicator.component.html
+++ b/src/app/pages/process-indicators/components/formulation-sheet/meta-indicator/meta-indicator.component.html
@@ -21,8 +21,8 @@
 
 
     <div class="container-btn-save">
-        <button (click)="save()" type="button" [disabled]="!formMeta.valid">Guardar</button>
-        <button (click)="next()" type="button">Siguiente</button>
+        <button (click)="save()" type="button" [disabled]="!formMeta.valid" class="btn-warm">Guardar</button>
+        <button (click)="next()" type="button" class="btn-blue-dark">Siguiente</button>
     </div>
 </form>
 
