--- a/src/app/pages/process-indicators/components/formulation-sheet/report-result/report-result.component.html
+++ b/src/app/pages/process-indicators/components/formulation-sheet/report-result/report-result.component.html
@@ -9,6 +9,6 @@
 </div>
 
 <div class="container-btn-save">
-    <button (click)="save()" type="button" [disabled]="!formReportResult.valid">Guardar</button>
-    <button (click)="next()" type="button">Siguiente</button>
+    <button (click)="save()" type="button" [disabled]="!formReportResult.valid" class="btn-warm">Guardar</button>
+    <button (click)="next()" type="button" class="btn-blue-dark">Siguiente</button>
 </div>
