--- a/src/app/pages/process-indicators/components/formulation-sheet/revision-approval/revision-approval.component.html
+++ b/src/app/pages/process-indicators/components/formulation-sheet/revision-approval/revision-approval.component.html
@@ -16,7 +16,7 @@
 
 
     <div class="container-btn-save">
-        <button (click)="save()" type="button" >Guardar</button>
-        <button (click)="next()" type="button">Siguiente</button>
+        <button (click)="save()" type="button" class="btn-warm">Guardar</button>
+        <button (click)="next()" type="button" class="btn-blue-dark">Siguiente</button>
     </div>
 </form>
