--- a/src/app/pages/process-indicators/components/revision-sheet/analysis-actions/analysis-actions.component.html
+++ b/src/app/pages/process-indicators/components/revision-sheet/analysis-actions/analysis-actions.component.html
@@ -14,7 +14,7 @@
     </mat-form-field>
 
     <div class="container-btn-save">
-        <button (click)="save()" type="button">Guardar</button>
-        <button (click)="next()" type="button">Siguiente</button>
+        <button (click)="save()" type="button" class="btn-warm">Guardar</button>
+        <button (click)="next()" type="button" class="btn-blue-dark">Siguiente</button>
     </div>
 </form>
