--- a/src/app/pages/processes/components/authorization-register/action-plan-register/action-plan-register.component.html
+++ b/src/app/pages/processes/components/authorization-register/action-plan-register/action-plan-register.component.html
@@ -47,5 +47,5 @@
 </div>
 
 <div class="container-btn-save">
-    <button (click)="next()" type="button">Siguiente</button>
+    <button (click)="next()" type="button" class="btn-warm">Siguiente</button>
 </div>
