--- a/src/app/pages/processes/components/authorization-register/follow-up-action/follow-up-action.component.html
+++ b/src/app/pages/processes/components/authorization-register/follow-up-action/follow-up-action.component.html
@@ -44,6 +44,6 @@
     </mat-form-field>
 
     <div class="container-btn-save">
-        <button (click)="next()" type="button" [disabled]="!formUpAction.valid">Siguiente</button>
+        <button (click)="next()" type="button" [disabled]="!formUpAction.valid" class="btn-warm">Siguiente</button>
     </div>
 </form>
