--- a/src/app/pages/processes/components/authorization-register/list-actions-authorization/list-actions-authorization.component.html
+++ b/src/app/pages/processes/components/authorization-register/list-actions-authorization/list-actions-authorization.component.html
@@ -11,7 +11,7 @@
           <mat-option *ngFor="let area of areas" [value]="area.id">{{area.name}}</mat-option>
         </mat-select>
     </mat-form-field>
-    <button (click)="search()" type="button" class="btn-search">Buscar</button>
+    <button (click)="search()" type="button" class="btn-warm">Buscar</button>
 </div>
 
 <div class="container-responsible-table">
