integracion de servicio de nodos

--- a/src/app/pages/documented-information/components/modal-document/general-documents/general-documents.component.html
+++ b/src/app/pages/documented-information/components/modal-document/general-documents/general-documents.component.html
@@ -48,5 +48,5 @@
 
 <div class="container-btn-save btn-mdl-doc">
     <button (click)="save()" type="button" [disabled]="!formGeneralDocument.valid">Guardar</button>
-    <button type="button" mat-dialog-close>Cerrar</button>
+    <button type="button" mat-dialog-close class="btn-blue-dark">Cerrar</button>
 </div>
