--- a/src/app/pages/documented-information/components/modal-document/internal-documents/internal-documents.component.html
+++ b/src/app/pages/documented-information/components/modal-document/internal-documents/internal-documents.component.html
@@ -29,5 +29,5 @@
 
 <div class="container-btn-save btn-mdl-doc" mat-dialog-actions>
     <button (click)="save()" type="button" [disabled]="!formInternalDocument.valid">Guardar</button>
-    <button type="button" mat-dialog-close>Cerrar</button>
+    <button type="button" mat-dialog-close class="btn-blue-dark">Cerrar</button>
 </div>
