--- a/src/app/pages/documented-information/components/modal-edit-docs/modal-edit-docs.component.html
+++ b/src/app/pages/documented-information/components/modal-edit-docs/modal-edit-docs.component.html
@@ -3,13 +3,23 @@
     <img src="assets/images/close-icon.png" alt="icono cerrar" mat-dialog-close>
 </div>
 
+<div>
+
+</div>
+
 <div class="body-mut">
   <div class="frame" *ngFor="let tree of trees">
     <input type="text" class="inpt-frame" [value]="tree.name" [readonly]="true">
     <div class="cont-icons">
        <mat-icon (click)="goSubnivel(tree)" *ngIf="tree?.children?.length">play_arrow</mat-icon>
        <mat-icon>pan_tool_alt</mat-icon>
-       <mat-icon>delete</mat-icon>
+       <mat-icon (click)="delete(tree.id)">delete</mat-icon>
+    </div>
+  </div>
+
+  <div class="frame" *ngIf="newNode" >
+    <input type="text" class="inpt-frame" id="inptnode">
+    <div class="cont-icons">
     </div>
   </div>
 </div>
@@ -17,5 +27,6 @@
 <div class="container-btn-save btn-mdl-e-doc">
   <button [disabled]="nivel === 1" (click)="back()">Atras</button>
   <button mat-dialog-close>Salir</button>
-  <button>Registrar</button>
+  <button (click)="register()" *ngIf="!newNode">Registrar</button>
+  <button (click)="save()" *ngIf="newNode">Guardar</button>
 </div>
