--- a/src/app/pages/documented-information/components/edit-document/edit-document.component.scss
+++ b/src/app/pages/documented-information/components/edit-document/edit-document.component.scss
@@ -38,6 +38,7 @@
     border-radius: 10px;
     cursor: pointer;
     font-size: 12px;
+    font-family: "NunitoSans-Regular";
 }
 
 .btn-upload-doc{
