--- a/src/app/pages/documented-information/components/edit-document/edit-document.component.html
+++ b/src/app/pages/documented-information/components/edit-document/edit-document.component.html
@@ -12,12 +12,12 @@
            Crear Nuevo Documento
         </div>
       </button>
-      <button class="btn-upload-doc" (click)="mut()">
+      <!-- <button class="btn-upload-doc" (click)="mut()">
         <div class="content-btn">
           <img src="assets/images/upload-doc.png" alt="">
           Crear Nodo
         </div>
-        </button>
+        </button> -->
         </div>
     </div>
 
