--- a/src/app/pages/documented-information/components/documented/documented.component.scss
+++ b/src/app/pages/documented-information/components/documented/documented.component.scss
@@ -137,3 +137,11 @@
     justify-content: space-between;
     margin-bottom  : 10px;
 }
+
+.div-btn{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 6px;
+    align-items: center;
+    line-height: 20px;
+}
