--- a/src/app/pages/documented-information/components/modal-edit-docs/modal-edit-docs.component.html
+++ b/src/app/pages/documented-information/components/modal-edit-docs/modal-edit-docs.component.html
@@ -3,17 +3,22 @@
     <img src="assets/images/close-icon.png" alt="icono cerrar" mat-dialog-close>
 </div>
 
-<div>
-
+<div style="margin-bottom: 10px;">
+  <button (click)="back()" class="btn-back-node" [disabled]="nivel === 1">
+    <div>
+      <img src="assets/images/back.png" alt="icono atras">
+      Atras
+    </div>
+  </button>
 </div>
 
 <div class="body-mut">
-  <div class="frame" *ngFor="let tree of trees">
-    <input type="text" class="inpt-frame" [value]="tree.name" [readonly]="true">
+  <div class="frame" *ngFor="let tree of trees;let i = index">
+    <input type="text" class="inpt-frame" [value]="i + '.' + ' ' + tree.name" [readonly]="true">
     <div class="cont-icons">
-       <mat-icon (click)="goSubnivel(tree)" *ngIf="tree?.children?.length">play_arrow</mat-icon>
-       <mat-icon>pan_tool_alt</mat-icon>
-       <mat-icon (click)="delete(tree.id)">delete</mat-icon>
+      <img src="assets/images/play-ic.png" alt="icono play" (click)="goSubnivel(tree)" [ngClass]="{'active-children': tree?.children?.length}">
+      <img src="assets/images/pencil-ic.png" alt="icono editar">
+      <img src="assets/images/trash-ic.png" alt="icono eliminar" (click)="delete(tree.id)">
     </div>
   </div>
 
@@ -25,8 +30,7 @@
 </div>
 
 <div class="container-btn-save btn-mdl-e-doc">
-  <button [disabled]="nivel === 1" (click)="back()">Atras</button>
-  <button mat-dialog-close>Salir</button>
   <button (click)="register()" *ngIf="!newNode">Registrar</button>
   <button (click)="save()" *ngIf="newNode">Guardar</button>
+  <button mat-dialog-close>Salir</button>
 </div>
