--- a/src/app/pages/documented-information/components/documented/documented.component.html
+++ b/src/app/pages/documented-information/components/documented/documented.component.html
@@ -27,7 +27,7 @@
 
             </mat-tree-node>
 
-            <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodeToggle style="cursor: pointer;margin-top: 14px;"
+            <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodeToggle style="cursor: pointer;"
                 [ngClass]="{'dlp-none': node?.autorizathion && !userLog}">
                 <div class="mat-tree-node">
                     <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.name">
