--- a/src/app/pages/documented-information/components/modal-edit-docs/modal-edit-docs.component.scss
+++ b/src/app/pages/documented-information/components/modal-edit-docs/modal-edit-docs.component.scss
@@ -9,6 +9,7 @@
         font-weight: 700;
         font-size  : 22px;
         cursor     : pointer;
+        margin-bottom: 30px;
     }
 
     img{
@@ -45,9 +46,9 @@
             display    : inline-block;
             text-align : start;
             font-style : normal;
-            font-weight: 700;
             font-size  : 14px;
-            color      : #888;
+            color: #888888;
+            font-family: "NunitoSans-Regular";
 
             &:focus {
                 outline: none;
@@ -56,14 +57,10 @@
 
         .cont-icons {
             display: flex;
-            gap    : 10px;
+            gap    : 14px;
 
-            mat-icon {
-                font-size: 30px;
-                height   : 30px;
-                width    : 30px;
-                color    : #888888;
-                cursor   : pointer;
+            img{
+                cursor: pointer;
             }
         }
     }
@@ -77,7 +74,32 @@
         width: 116px;
         height: 43px;
     }
-   button:last-child{
+   button:first-child{
     background-color: $warn;
   }
+}
+
+.btn-back-node{
+    font-family: "NunitoSans-Regular";
+    color: #888888;
+    font-size: 16px;
+    font-weight: 700;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    line-height: 18px;
+
+    img{
+        margin-right: 6px;
+        filter: brightness(0) saturate(100%) invert(57%) sepia(0%) saturate(1210%) hue-rotate(244deg) brightness(93%) contrast(90%);
+    }
+
+    &:disabled{
+        pointer-events: none;
+        opacity: 0.5;
+    }
+}
+
+.active-children{
+    filter: brightness(0) saturate(100%) invert(72%) sepia(87%) saturate(1286%) hue-rotate(346deg) brightness(100%) contrast(98%);
 }
