--- a/src/app/pages/documented-information/components/edit-document/actas/actas.component.html
+++ b/src/app/pages/documented-information/components/edit-document/actas/actas.component.html
@@ -3,21 +3,21 @@
         <ng-container matColumnDef="managementSystem">
             <th mat-header-cell *matHeaderCellDef> Sistema de Gestión aplicable  </th>
             <td mat-cell *matCellDef="let element;"> 
-               {{element.managementSystem}} 
+               {{element?.tpDocuActa?.codigoSistemaAplicable}} 
             </td>
         </ng-container>
 
         <ng-container matColumnDef="typeMeeting">
             <th mat-header-cell *matHeaderCellDef> Tipo de Reunión </th>
             <td mat-cell *matCellDef="let element;"> 
-               {{element.typeMeeting}} 
+               {{element?.tpDocuActa?.tipoReunion}} 
             </td>
         </ng-container>
 
         <ng-container matColumnDef="actaNumber">
             <th mat-header-cell *matHeaderCellDef> N° de Acta </th>
             <td mat-cell *matCellDef="let element;"> 
-                {{element.actaNumber}} 
+                {{element?.tpDocuActa?.numeroActa}} 
             </td>
         </ng-container>
 
@@ -26,7 +26,7 @@
             <td mat-cell *matCellDef="let element;"> 
                 <button mat-icon-button aria-label="boton descargar archivo"
                         (click)="downloadArchive()"
-                        *ngIf="element.archive"
+                        *ngIf="element?.archive"
                         style="color: #ec141c;">
                     <mat-icon>picture_as_pdf</mat-icon>
                 </button>
