--- a/src/app/pages/documented-information/components/edit-document/document-one/document-one.component.html
+++ b/src/app/pages/documented-information/components/edit-document/document-one/document-one.component.html
@@ -3,42 +3,42 @@
         <ng-container matColumnDef="documentName">
             <th mat-header-cell *matHeaderCellDef> Nombre de documento </th>
             <td mat-cell *matCellDef="let element;"> 
-               {{element.documentName}} 
+               {{element?.tpDocuGeneEspe?.codigoResolucion}} 
             </td>
         </ng-container>
 
         <ng-container matColumnDef="code">
             <th mat-header-cell *matHeaderCellDef> Código </th>
             <td mat-cell *matCellDef="let element;"> 
-               {{element.code}} 
+               {{element?.tpDocuGeneEspe?.codigoDocumento}} 
             </td>
         </ng-container>
 
         <ng-container matColumnDef="version">
             <th mat-header-cell *matHeaderCellDef> Versión </th>
             <td mat-cell *matCellDef="let element;"> 
-               {{element.version}} 
+               {{element?.tpDocuGeneEspe?.versionDocumento}} 
             </td>
         </ng-container>
 
         <ng-container matColumnDef="resolution">
             <th mat-header-cell *matHeaderCellDef> Resolución con que se aprueba </th>
             <td mat-cell *matCellDef="let element;"> 
-               {{element.resolution}} 
+               {{element?.tpDocuGeneEspe?.codigoResolucion}} 
             </td>
         </ng-container>
 
         <ng-container matColumnDef="dateApproval">
             <th mat-header-cell *matHeaderCellDef> Fecha de aprobación </th>
             <td mat-cell *matCellDef="let element;"> 
-               {{element.dateApproval | date : 'dd/MM/yyyy'}} 
+               {{element?.tpDocuGeneEspe?.fechaAprobacion | date : 'dd/MM/yyyy'}} 
             </td>
         </ng-container>
 
         <ng-container matColumnDef="applicableSystems">
             <th mat-header-cell *matHeaderCellDef> Sistemas Aplicables </th>
             <td mat-cell *matCellDef="let element;"> 
-               {{element.applicableSystems}} 
+               {{element?.tpDocuGeneEspe?.codigoSistemaAplicable}} 
             </td>
         </ng-container>
 
@@ -47,7 +47,7 @@
             <td mat-cell *matCellDef="let element;"> 
                 <button mat-icon-button aria-label="boton descargar archivo"
                         (click)="downloadArchive()"
-                        *ngIf="element.archive"
+                        *ngIf="element?.archive"
                         style="color: #ec141c;">
                     <mat-icon>picture_as_pdf</mat-icon>
                 </button>
