--- a/src/app/pages/documented-information/components/edit-document/document-three/document-three.component.html
+++ b/src/app/pages/documented-information/components/edit-document/document-three/document-three.component.html
@@ -3,21 +3,21 @@
         <ng-container matColumnDef="documentName">
             <th mat-header-cell *matHeaderCellDef> Nombre del documento  </th>
             <td mat-cell *matCellDef="let element;"> 
-               {{element.documentName}} 
+               {{element.tpDocuInteExte.numeroResolucion}} 
             </td>
         </ng-container>
 
         <ng-container matColumnDef="numberResolution">
             <th mat-header-cell *matHeaderCellDef> N° de Resolución u otro </th>
             <td mat-cell *matCellDef="let element;"> 
-               {{element.numberResolution}} 
+               {{element.tpDocuInteExte.numeroResolucion}} 
             </td>
         </ng-container>
 
         <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef> Fecha </th>
             <td mat-cell *matCellDef="let element;"> 
-                {{element.date | date : 'dd/MM/yyyy'}} 
+                {{element.tpDocuInteExte.fechaDocumento | date : 'dd/MM/yyyy'}} 
             </td>
         </ng-container>
 
@@ -26,7 +26,7 @@
             <td mat-cell *matCellDef="let element;"> 
                 <button mat-icon-button aria-label="boton descargar archivo"
                         (click)="downloadArchive()"
-                        *ngIf="element.archive"
+                        *ngIf="element?.archive"
                         style="color: #ec141c;">
                     <mat-icon>picture_as_pdf</mat-icon>
                 </button>
