--- a/src/app/pages/documented-information/components/edit-document/edit-document.component.html
+++ b/src/app/pages/documented-information/components/edit-document/edit-document.component.html
@@ -22,17 +22,17 @@
     </div>
 
 
-<mat-tab-group class="mat-tab-sunarp" [(selectedIndex)]="indexTab">
+<mat-tab-group class="mat-tab-sunarp" [(selectedIndex)]="indexTab" (selectedTabChange)="onChangeTab($event)">
     <mat-tab label="Documentos Generales y Específicos ">
-      <app-document-one [newData]="dataDoc1" (onEdit)="ModalDoc($event)" [editData]="dataEditDoc1"></app-document-one>
+      <app-document-one [dataTable]="datasourceGE" [newData]="dataDoc1" (onEdit)="ModalDoc($event)" [editData]="dataEditDoc1"></app-document-one>
     </mat-tab>
     <mat-tab label=" Documentos Internos">
-      <app-document-two [newData]="dataDoc2" (onEdit)="ModalDoc($event)" [editData]="dataEditDoc2"></app-document-two>
+      <app-document-two [dataTable]="datasourceIE" [newData]="dataDoc2" (onEdit)="ModalDoc($event)" [editData]="dataEditDoc2"></app-document-two>
     </mat-tab>
     <mat-tab label="Documentos Externos">
-      <app-document-three [newData]="dataDoc3" (onEdit)="ModalDoc($event)" [editData]="dataEditDoc3"></app-document-three>
+      <app-document-three [dataTable]="datasourceIE" [newData]="dataDoc3" (onEdit)="ModalDoc($event)" [editData]="dataEditDoc3"></app-document-three>
     </mat-tab>
     <mat-tab label="Actas">
-      <app-actas [newData]="dataActa" (onEdit)="ModalDoc($event)" [editData]="dataEditActa"></app-actas>
+      <app-actas [dataTable]="datasourceAC" [newData]="dataActa" (onEdit)="ModalDoc($event)" [editData]="dataEditActa"></app-actas>
     </mat-tab>
 </mat-tab-group>
