implementacion de servicios en tabs de nuevos documentos

--- a/src/app/pages/documented-information/components/modal-document/actas-form/actas-form.component.html
+++ b/src/app/pages/documented-information/components/modal-document/actas-form/actas-form.component.html
@@ -10,6 +10,11 @@
     </mat-form-field>
 
     <mat-form-field appearance="outline">
+        <mat-label>Nombre del archivo</mat-label>
+        <input matInput placeholder="Nombre del archivo" formControlName="nameFile">
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
         <mat-label>N° de Acta</mat-label>
         <input matInput placeholder="N° de Acta" formControlName="actaNumber">
     </mat-form-field>
