--- a/src/app/pages/documented-information/components/modal-document/external-documents/external-documents.component.html
+++ b/src/app/pages/documented-information/components/modal-document/external-documents/external-documents.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="formExternalDocument" class="form-standart frm-modal-document">
     <mat-form-field appearance="outline">
-        <mat-label>Nombre de Documento</mat-label>
+        <mat-label>Nombre de Archivo</mat-label>
         <input matInput placeholder="Nombre de Documento" formControlName="documentName">
     </mat-form-field>
 
